--- a/composer.json
+++ b/composer.json
@@ -36,5 +36,10 @@
         "respect/validation": "^1.0",
         "symfony/validator": "^2.6.2",
         "zendframework/zend-validator": "^2.3"
+    },
+    "config": {
+        "platform": {
+            "php": "7.4"
+        }
     }
 }
