--- a/composer.json
+++ b/composer.json
@@ -29,13 +29,14 @@
     },
 
     "require-dev": {
-        "phpunit/phpunit": "^4.0 || ^5.1.1",
-        "mockery/mockery": "^0.9.4",
         "graze/hamcrest-test-listener": "^1.0.1",
+        "graze/standards": "^2.0",
 
+        "mockery/mockery": "^0.9.4",
+        "phpunit/phpunit": "^4.0 || ^5.1.1",
         "respect/validation": "^1.0",
-        "symfony/validator": "^2.6.2",
         "squizlabs/php_codesniffer": "^3.5",
+        "symfony/validator": "^2.6.2",
         "zendframework/zend-validator": "^2.3"
     },
     "config": {
