--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
 
     "autoload-dev": {
-        "psr-4": { "": "tests/unit/" }
+        "psr-4": { "Graze\\DataValidator\\Test\\": "tests/unit/" }
     },
 
     "require": {
